--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "sass": "^1.77.8"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.46.3",
+    "@tanstack/router-plugin": "^1.45.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
