--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.77.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@tanstack/router-devtools": "^1.46.3",
     "@tanstack/router-plugin": "^1.45.13",
     "@types/react": "^18.3.3",
