--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@tanstack/react-router": "^1.46.3",
     "@tanstack/react-table": "^8.19.3",
+    "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
