--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@tanstack/react-router": "^1.46.3",
     "@tanstack/react-table": "^8.19.3",
@@ -18,6 +20,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "sass": "^1.77.8"
   },
