--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-router": "^1.46.3",
     "@tanstack/react-table": "^8.19.3",
     "classnames": "^2.5.1",
