chore: Add type references to vite.config and type = node to ts config

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,5 +29,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "z-archive"]
+  "include": ["src", "z-archive"],
+  "types": ["node"]
 }
