--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@faker-js/faker": "^8.4.1",
     "@tanstack/router-devtools": "^1.46.3",
     "@tanstack/router-plugin": "^1.45.13",
+    "@types/node": "^22.4.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
